c1/ResetHandValue
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:487:12: error: expected expression
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:487:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:487:41: error: expected expression
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:487:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[8] = *( _OWORD *)&std_hand_value[8]; 
                                ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:488:12: error: expected expression
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:488:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
   ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:488:41: error: expected expression
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
                                        ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:488:33: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&hand_value[4] = *( _OWORD *)&std_hand_value[4]; 
                                ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:489:12: error: expected expression
*( _OWORD *)hand_value = *( _OWORD *)std_hand_value; 
           ^
/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/partner.c:489:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)hand_value = *( _OWORD *)std_hand_value; 
   ^
10 errors generated.
make: *** [/data/output_dir/patch/sjeng/ida/clang/O1/sjeng-clang-O1/ResetHandValue/src/obj/partner.o] Error 1
